# MFloat

./: .gitignore  CMakeLists.txt  README.md  example.qrc
.github/workflows/: compile-project.yml
debian/: control
example/: CMakeLists.txt  Main.qml  example.qrc  main.cpp
src/: CMakeLists.txt  MFloatPlugin.cpp  MFloatPlugin.h  mfloat.qrc
src/imports/MFloat/Controls/: ColorConstants.qml  MButton.qml  MFrame.qml  MLineEdit.qml  MNotificationBox.qml  MSwitchButton.qml
